--- a/Develop/assets/css/style.css
+++ b/Develop/assets/css/style.css
@@ -24,7 +24,8 @@ header h1 .seo {
     color: #d9dcd6;
 }
 
-header div {
+/* Changed div to section */
+header section {
     padding-top: 15px;
     margin-right: 20px;
     float: right;
@@ -32,11 +33,13 @@ header div {
     font-size: 20px;
 }
 
-header div ul {
+/* Changed div to section */
+header section ul {
     list-style-type: none;
 }
 
-header div ul li {
+/* Changed div to section */
+header section ul li {
     display: inline-block;
     margin-left: 25px;
 }
